# EuroCode2-Enhanced-Punching-Shear-Formula

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: Data.xlsx  Daten_Siburg.xlsx  README.md
notebooks/: 01_data_overview.ipynb  02_eurocode_baseline.ipynb  03_regression_models.ipynb  04_svm_models.ipynb  05_tree_models.ipynb  06_model_comparison.ipynb  07_explainable_formulas.ipynb  08_lever_comparison.ipynb
notebooks/legacy/: 01_data_overview.ipynb  02_eurocode_baseline.ipynb  03_regression_models.ipynb  04_svm_models.ipynb  05_tree_models.ipynb  README.md
punching_shear/: __init__.py  data.py  eurocode.py  evaluation.py  features.py  glassbox.py  greybox.py  models.py  symbolic.py
results/: feature_importance.csv  formula_metrics_grouped.csv  formula_metrics_loadMN.csv  formula_metrics_random.csv  formula_oof_predictions.csv  formula_paired_vs_ec2.csv  formulas.txt  metrics_grouped_kfold.csv  metrics_loadMN.csv  metrics_random_kfold.csv  oof_predictions.csv  paired_significance.csv  size_effect_correlations.csv  summary.json
scripts/: build_notebooks.py  make_readme_figures.py  run_analysis.py  run_formula_models.py  run_lever2_pysr.py  run_levers.py
tests/: test_formula_models.py  test_levers.py  test_pipeline.py
